# earthrise-book-assistant

./: .env.example  .gitignore  .gitmodules  README.md  docker-compose.dev.yml  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
api/: dependencies.py  main.py
api/routes/: ask.py  chat.py  search.py  validators.py
configs/: local.env.example  prod.env.example
data/: transcript_corrections.yml  video_chapter_map.yml  whisper_prompt.md
data/transcripts/: 0mqivFOlF1k.json  DnPosJ6IJ0Y.json  e6lqjTUAvmI.json  kINuYpZroPA.json  l3Tv5UBlw9I.json
infra/docker/: Dockerfile.app  Dockerfile.indexer  Dockerfile.quarto
infra/docker/scripts/: render_book.sh
notebooks/: transcribe_gpu.ipynb
scripts/: index_book.py  run_query.py  transcribe.py
src/earthrise_rag/: config.py  interfaces.py
src/earthrise_rag/citations/: __init__.py  citation_builder.py
src/earthrise_rag/generation/: PROMPT.md  __init__.py  context_builder.py  llm_client.py
src/earthrise_rag/indexing/: base.py  chunkers.py  embedder.py  parsers.py  pipeline.py  qdrant_store.py  sparse_embedder.py
src/earthrise_rag/models/: __init__.py  answer.py  chunk.py  citation.py  document.py  index_result.py  scored_chunk.py
src/earthrise_rag/query/: __init__.py  pipeline.py
src/earthrise_rag/retrieval/: __init__.py  rerankers.py  strategies.py
system-design/: api_design.md  architecture_contracts.md  architecture_overview.md  database_schema.md
tests/: conftest.py  test_ask_api.py  test_chapter_discovery.py  test_chat_api.py  test_chat_stream.py  test_chunkers.py  test_citation_url.py  test_config.py  test_context_history.py  test_dependencies.py  test_generation.py  test_health.py  test_models.py  test_parsers.py  test_pipeline.py  test_qdrant_filters.py  test_readiness.py  test_retrieval.py  test_search_api.py  test_transcribe.py
widget/: _quarto-chat.yml  chat.css  chat.html  chat.js
