[project]
name = "earthrise-book-assistant"
version = "0.1.0"
description = "Book viewer and RAG chat assistant for the EarthRISE Applied AI and Deep Learning Book"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[dependency-groups]
indexer = []
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earthrise_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
