[project]
name = "earthrise-book-assistant"
version = "0.1.0"
description = "Book viewer and RAG chat assistant for the EarthRISE Applied AI and Deep Learning Book"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
dependencies = [
    "pydantic>=2.1",
    "pydantic-settings>=2.1",
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "sentence-transformers>=5.6",
    "qdrant-client[fastembed]>=1.18.0",
    "openai>=2.44",
]

[dependency-groups]
indexer = [
    "nbformat>=5.10",
    "pyyaml>=6.0",
    "pdfplumber>=0.11",
    "openai-whisper>=20250625",
    "yt-dlp>=2026.6",
]
dev = [
    "pytest>=9.1",
    "httpx>=0.28",
    "ruff>=0.15",
    "nbformat>=5.10",
    "pyyaml>=6.0",
    "pdfplumber>=0.11",
    "pyright>=1.1.411",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/earthrise_rag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
extraPaths = ["src"]
exclude = ["dev/", "book/", "**/node_modules", "**/__pycache__", "**/.*", ".venv"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["book/"]
